Set up typer and morphext

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="styles.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"> -->
 </head>
 <body>
-  <h1>
-    <span class="typer" id="main" data-words="Hi, I'm Teresa" data-colors="black" data-delay="100" data-deleteDelay="1000"></span>
-    <span class="cursor" data-cursorDisplay="|" data-owner="main"></span>
-  </h1>
+  <article>
+    <header>
+      <h1 class="header-text">
+        <span class="typer" id="main" data-words="Hi there, I'm Teresa. I create websites" data-colors="darkblue" data-delay="100" data-deleteDelay="1000" data-loop="false"></span>
+        <span class="cursor" data-cursorDisplay="|" data-owner="main"></span>
+      </h1>
+      <h3><span class="animated fadeIn">I like to </span></h3>
+      <nav>
+        <h3 id="design" class="fadeInDown animated">design</h3>
+        <h3 id="code" class="fadeInDown animated">code</h3>
+        <h3 id="test" class="fadeInDown animated">test</h3> simplify, translate, clarify, empathize, test, context-switch</span>
+      </nav>
+    </header>
   <script src="typer.js"></script>
 </body>
